@@ -27,32 +27,18 @@
  */
 static VALUE cOCI8;
 
+static VALUE oci8_svcctx_logoff(VALUE self);
+static VALUE dummy(VALUE self)
+{
+    return Qnil;
+}
+
 static void oci8_svcctx_free(oci8_base_t *base)
 {
     oci8_svcctx_t *svcctx = (oci8_svcctx_t *)base;
-    sword rv;
 
-    oci_rc(svcctx, OCITransRollback(svcctx->base.hp, oci8_errhp, OCI_DEFAULT));
-    switch (svcctx->logon_type) {
-    case T_IMPLICIT:
-        rv = OCILogoff(svcctx->base.hp, oci8_errhp);
-        if (rv != OCI_SUCCESS)
-            oci8_raise(oci8_errhp, rv, NULL);
-        svcctx->base.type = 0;
-        svcctx->logon_type = T_NOT_LOGIN;
-        break;
-    case T_EXPLICIT:
-        rv = OCISessionEnd(svcctx->base.hp, oci8_errhp, svcctx->authhp, OCI_DEFAULT);
-        if (rv != OCI_SUCCESS)
-            oci8_raise(oci8_errhp, rv, NULL);
-        rv = OCIServerDetach(svcctx->srvhp, oci8_errhp, OCI_DEFAULT);
-        if (rv != OCI_SUCCESS)
-            oci8_raise(oci8_errhp, rv, NULL);
-        svcctx->logon_type = T_NOT_LOGIN;
-        break;
-    case T_NOT_LOGIN:
-        break;
-    }
+    /* ignore exceptions when logoff. */
+    rb_rescue(oci8_svcctx_logoff, base->self, dummy, Qnil);
     if (svcctx->authhp) {
         OCIHandleFree(svcctx->authhp, OCI_HTYPE_SESSION);
         svcctx->authhp = NULL;
@@ -212,7 +198,33 @@ static VALUE oci8_svcctx_initialize(int argc, VALUE *argv, VALUE self)
  */
 static VALUE oci8_svcctx_logoff(VALUE self)
 {
-    oci8_base_free((oci8_base_t*)DATA_PTR(self));
+    oci8_svcctx_t *svcctx = (oci8_svcctx_t *)DATA_PTR(self);
+    sword rv;
+
+    switch (svcctx->logon_type) {
+    case T_IMPLICIT:
+        oci_rc(svcctx, OCITransRollback(svcctx->base.hp, oci8_errhp, OCI_DEFAULT));
+        oci_rc2(rv, svcctx, OCILogoff(svcctx->base.hp, oci8_errhp));
+        svcctx->base.type = 0;
+        svcctx->logon_type = T_NOT_LOGIN;
+        if (rv != OCI_SUCCESS)
+            oci8_raise(oci8_errhp, rv, NULL);
+        svcctx->authhp = NULL;
+        svcctx->srvhp = NULL;
+        break;
+    case T_EXPLICIT:
+        oci_rc(svcctx, OCITransRollback(svcctx->base.hp, oci8_errhp, OCI_DEFAULT));
+        oci_rc2(rv, svcctx, OCISessionEnd(svcctx->base.hp, oci8_errhp, svcctx->authhp, OCI_DEFAULT));
+        if (rv == OCI_SUCCESS) {
+            oci_rc2(rv, svcctx, OCIServerDetach(svcctx->srvhp, oci8_errhp, OCI_DEFAULT));
+        }
+        svcctx->logon_type = T_NOT_LOGIN;
+        if (rv != OCI_SUCCESS)
+            oci8_raise(oci8_errhp, rv, NULL);
+        break;
+    case T_NOT_LOGIN:
+        break;
+    }
     return Qtrue;
 }
 
